settings: Fix text-overflow in organization settings announcements dropdown.
Dropdowns are rendered by the dropdown_list_widget. To show the overflow as
ellipsis, a classname '{{widget_name}}_dropdown-toggle' was added inside the
button, which will be rendered as 'realm_notifications_stream_id_dropdown-toggle'
for 'new stream announcement' and
'realm_signup_notifications_stream_id_dropdown-toggle' for 'new user announcement'.

To show the dropdowns inline, the 'inline-flex' property was
added. To hide the overflow, the span ID '{{widget_name}}_name' present inside
the button is used.

To maintain consistency between all the sections, a max-width of 230px is used.

Fixes: #24539

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1498,6 +1498,20 @@ $option_title_width: 180px;
 }
 
 .dropdown-list-widget {
+    button.realm_notifications_stream_id_dropdown-toggle,
+    button.realm_signup_notifications_stream_id_dropdown-toggle {
+        display: inline-flex;
+        justify-content: space-between;
+
+        #realm_notifications_stream_id_name,
+        #realm_signup_notifications_stream_id_name {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            max-width: 230px;
+        }
+    }
+
     button.dropdown-toggle {
         text-align: left;
 
